<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Sunshine</string>

    <!-- By convention "action" denotes string relates to action bar -->
    <string name="hello_world">Hello World</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_details">Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_view_location">View Location</string>
    <string name="action_share">Share</string>

    <!-- Strings related to Settings -->
        <!-- Label for location preference -->
        <string name="pref_location_label">Location</string>
        <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
        <string name="pref_location_key" translatable="false">location</string>
        <!-- Default postal code for location preference [CHAR LIMIT=NONE]-->
        <string name="pref_location_default" translatable="false">London, UK</string>

        <!-- Label for temperature unit preference -->
        <string name="pref_tempUnit_label">Temperature Units</string>
        <!-- Key name for storing temperature units in SharedPreferences -->
        <string name="pref_tempUnit_key" translatable="false">tempUnit</string>

        <!-- Labels for temperature units -->
        <string name="pref_tempUnit_metric_label">Metric</string>
        <string name="pref_tempUnit_imperial_label">Imperial</string>
        <!-- Key name for storing temperature units in SharedPreferences -->
        <string name="pref_tempUnit_metric" translatable="false">metric</string>
        <string name="pref_tempUnit_imperial" translatable="false">imperial</string>
        <!-- Default temperature units preference [CHAR LIMIT=NONE]-->
        <string name="pref_tempUnit_default" translatable="false">metric</string>

        <!-- Arrays used for temperature preference spinner -->
        <string-array name="tempUnit_entries">
            <item>@string/pref_tempUnit_metric_label</item>
            <item>@string/pref_tempUnit_imperial_label</item>
        </string-array>

        <string-array name="tempUnit_values">
            <item>@string/pref_tempUnit_metric</item>
            <item>@string/pref_tempUnit_imperial</item>
        </string-array>

        <!-- Strings related to Notification Enabled preference -->
        <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
        <string name="pref_enable_notifications_label">Weather Notifications</string>
        <string name="pref_enable_notifications_true">Enabled</string>
        <string name="pref_enable_notifications_false">Not Enabled</string>
        <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date">
        <xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g>
    </string>

    <!-- Temperature formats -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Humidity formats [CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g>%%</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format [CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
    <string name="detail_icon_content_description">Icon representing the weather description</string>

    <!-- Wind direction view description -->
    <string name="wd_view_description">Compass displaying wind direction </string>

    <!-- Account type (for sync-adapter authenticator) -->
        <!-- SyncAdapter related -->
        <string name="sync_account_type">com.example.sunshine</string>
        <string name="content_authority">com.example.royma.sunshine.app</string>

    <!-- Notification Format -->
    <string name="format_notification">
        Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g>
            Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>
    <string name="channel_name">com.example.sunshine</string>
    <string name="channel_description">Sunshine channel</string>
</resources>
