<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true" />

    <ListPreference
        android:title="@string/pref_tempUnit_label"
        android:key="@string/pref_tempUnit_key"
        android:dialogTitle="@string/pref_tempUnit_label"
        android:entries="@array/tempUnit_entries"
        android:entryValues="@array/tempUnit_values"
        android:defaultValue="@string/pref_tempUnit_default" />

    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />

</PreferenceScreen>